--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h2>Reach Out</h2>
     </section>
     <footer>
-        <h2>❤️ Made with love by Run Buddy.</h2>
+        <h2>❤️ Made with love by Run Buddy. xoxo</h2>
     </footer>
 
     </body>
