--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
     <section id="your-trainers" class="trainers">
         <h2 class="section-title primary-border">Meet The Trainers</h2>
         <article class="trainer">
-          <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-          <div class="trainer-bio text-left">
+            <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+            <div class="trainer-bio text-left">
             <h3>Arron Stephens</h3>
             <h4>Speed / Strength</h4>
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
               itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
             </p>
-          </div>
+            </div>
         </article>
         <article class="trainer">
             <div class="trainer-bio text-right">
@@ -125,6 +125,31 @@
     </section>
     <section>
         <h2>Reach Out</h2>
+        <div class="contact-info">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2906.950351707419!2d-79.76124604906924!3d43.23150057903565!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882c9894652dc441%3A0x1214539978367b9a!2s90%20Delawana%20Dr%2C%20Hamilton%2C%20ON%20L8E%201G4!5e0!3m2!1sen!2sca!4v1614112945242!5m2!1sen!2sca" 
+            frameborder="0"
+            width="400" 
+            height="400" 
+            style="border:0;" 
+            allowfullscreen
+            >
+        </iframe>
+        </div>
+        <div>
+            <h3>Run Buddy</h3>
+            <p>
+              Any questions or concerns before signing up?
+              <br />
+              Let us know and we'll be happy to talk to you!
+            </p>
+            <address>
+                90 Delawana Drive <br/>
+                Hamilton, ON <br/>
+                L8E 1G5<br />
+                P: 555.RUN.BUDZ (555.786.2839)<br/>
+                E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+            </address>
+        </div>
     </section>
     <footer>
         <h2>❤️ Made with love by Run Buddy.</h2>
