--- a/index.html
+++ b/index.html
@@ -123,19 +123,14 @@
             </div>
           </article>
     </section>
-    <section>
-        <h2>Reach Out</h2>
+    <section id="reach-out" class="contact">
+        <h2 class="section-title secondary-border">Reach Out</h2>
         <div class="contact-info">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2906.950351707419!2d-79.76124604906924!3d43.23150057903565!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882c9894652dc441%3A0x1214539978367b9a!2s90%20Delawana%20Dr%2C%20Hamilton%2C%20ON%20L8E%201G4!5e0!3m2!1sen!2sca!4v1614112945242!5m2!1sen!2sca" 
-            frameborder="0"
-            width="400" 
-            height="400" 
-            style="border:0;" 
-            allowfullscreen
-            >
-        </iframe>
-        </div>
-        <div>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12182.30520634488!2d-74.0652613!3d40.2407219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1561060983193!5m2!1sen!2sus"
+            frameborder="0" style="border:0" allowfullscreen>
+          </iframe>
+          <div>
             <h3>Run Buddy</h3>
             <p>
               Any questions or concerns before signing up?
@@ -143,12 +138,13 @@
               Let us know and we'll be happy to talk to you!
             </p>
             <address>
-                90 Delawana Drive <br/>
-                Hamilton, ON <br/>
-                L8E 1G5<br />
-                P: 555.RUN.BUDZ (555.786.2839)<br/>
-                E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+              55 Main Street <br />
+              Some Town, Ca <br />
+              12345<br />
+              P: 555.RUN.BUDZ (555.786.2839)<br />
+              E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
             </address>
+          </div>
         </div>
     </section>
     <footer>
