--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
     <section id="your-trainers" class="trainers">
         <h2 class="section-title primary-border">Meet The Trainers</h2>
         <article class="trainer">
-            <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+        <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
             <div class="trainer-bio text-left">
-            <h3>Arron Stephens</h3>
-            <h4>Speed / Strength</h4>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-              itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
-            </p>
+                <h3>Arron Stephens</h3>
+                <h4>Speed / Strength</h4>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                    itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+                </p>
             </div>
         </article>
         <article class="trainer">
@@ -150,10 +150,9 @@
     <footer>
         <h2>❤️ Made with love by Run Buddy.</h2>
         <div>
-            <a href="#">Read Our Privacy Policy</a><br />
+            <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
             &copy; 2019 Run Buddy, Inc.
         </div>
     </footer>
-
     </body>
 </html>
