--- a/index2.0.html
+++ b/index2.0.html
@@ -2,12 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="UFT-8" />
-        <title>Run Buddy</title>
         <link rel="stylesheet" href="./assets/css/style.css" />
+        <title>Run Buddy</title>
     </head>
     <body>
     <header>
-        <h1>RUN BUDDY</h1>
+        <h1>
+            <a href="#">RUN BUDDY</a>
+        </h1>
         <nav>
             <ul>
                 <li>
@@ -132,7 +134,9 @@
           </article>
     </section>
     <section id="reach-out" class="contact">
-        <h2 class="section-title secondary-border">Reach Out</h2>
+        <h2 class="section-title secondary-border">
+            Reach Out
+        </h2>
         <div class="contact-info">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12182.30520634488!2d-74.0652613!3d40.2407219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1561060983193!5m2!1sen!2sus"
@@ -143,10 +147,8 @@
             <form>
                <label for="contact-name">Your Name</label>
                <input type="text" id="contact-name" placeholder="Your Name" />
-          
                <label for="contact-message">Message</label>
                <textarea id="contact-message" placeholder="Message"></textarea>
-          
                <button type="submit">Submit</button>
               </form>
           </div>
@@ -154,12 +156,12 @@
             <h3>Run Buddy</h3>
             <p>
               Any questions or concerns before signing up?
-              <br />
+              <br/>
               Let us know and we'll be happy to talk to you!
             </p>
             <address>
-              55 Main Street <br />
-              Some Town, Ca <br />
+              55 Main Street <br/>
+              Some Town, Ca <br/>
               12345<br />
               P: 555.RUN.BUDZ (555.786.2839)<br />
               E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
@@ -170,7 +172,7 @@
     <footer>
         <h2>❤️ Made with love by Run Buddy.</h2>
         <div>
-            <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
+            <a href="./privacy-policy.html">Read Our Privacy Policy</a><br/>
             &copy; 2019 Run Buddy, Inc.
         </div>
     </footer>
