--- a/index2.0.html
+++ b/index2.0.html
@@ -135,14 +135,14 @@
             </div>
         </div>
     </section>
-    <section id="your-trainers" class="trainers">
+    <section id="your-trainers">
         <div class="flex-row">
             <h2 class="section-title primary-border">
                 Meet The Trainers
             </h2>
         </div>
-    <div class="trainer">
-        <article>
+    <div class="trainers">
+        <article class="trainer">
             <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
             <div class="trainer-bio">
                 <h3 class="trainer-name">Arron Stephens</h3>
@@ -153,9 +153,7 @@
                 </p>
             </div>
         </article>
-    </div>
-    <div class="trainer">
-        <article>
+        <article class="trainer">
             <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
             <div class="trainer-bio">
                 <h3 class="trainer-name">Joanna Gill</h3>
@@ -166,9 +164,7 @@
                 </p>
             </div>
         </article>
-    </div>
-    <div class="trainer">
-        <article>
+        <article class="trainer">
             <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
             <div class="trainer-bio">
                 <h3 class="trainer-name">Harry "the Headband" Smith</h3>
@@ -179,7 +175,6 @@
                 </p>
             </div>
         </article>
-    </div>
     </section>
     <section id="reach-out" class="contact">
         <div class="flex-row">
@@ -188,36 +183,35 @@
             </h2>
         </div>
         <div class="contact-info">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12182.30520634488!2d-74.0652613!3d40.2407219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1561060983193!5m2!1sen!2sus"
-            frameborder="0" style="border:0" allowfullscreen>
-          </iframe>
-          <div class="contact-form">
-            <h3>Contact Us</h3>
-            <form>
-               <label for="contact-name">Your Name</label>
-               <input type="text" id="contact-name" placeholder="Your Name" />
-               <label for="contact-message">Message</label>
-               <textarea id="contact-message" placeholder="Message"></textarea>
-               <button type="submit">Submit</button>
+            <div>
+                <h3>Run Buddy</h3>
+                <p>
+                    Any questions or concerns before signing up?
+                    <br />
+                    Let us know and we'll be happy to talk to you!
+                </p>
+                <address>
+                    55 Main Street <br />
+                    Some Town, Ca <br />
+                    12345 <br />
+                    P: <a href="tel:555.786.2839">555.RUN.BUDZ (555.786.2839)</a><br />
+                    E: <a href="mailto://info@runbuddy.io">info@runbuddy.io</a>
+                </address>
+            </div>
+            <div class="contact-form">
+              <h3>Contact Us</h3>
+              <form>
+                <label for="contact-name">Your Name</label>
+                <input type="text" id="contact-name" placeholder="Your Name" />
+                <label for="contact-message">Message</label>
+                <textarea id="contact-message" placeholder="Message"></textarea>
+                <button type="submit">Submit</button>
               </form>
+            </div>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12182.30520634488!2d-74.0652613!3d40.2407219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1561060983193!5m2!1sen!2sus"
+              frameborder="0" style="border:0" allowfullscreen></iframe>
           </div>
-          <div>
-            <h3>Run Buddy</h3>
-            <p>
-              Any questions or concerns before signing up?
-              <br/>
-              Let us know and we'll be happy to talk to you!
-            </p>
-            <address>
-              55 Main Street <br/>
-              Some Town, Ca <br/>
-              12345<br />
-              P: 555.RUN.BUDZ (555.786.2839)<br />
-              E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-            </address>
-          </div>
-        </div>
     </section>
     <footer>
         <h2>❤️ Made with love by Run Buddy.</h2>
