--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -6,6 +6,7 @@
   <title>Privacy Policy - Run Buddy</title>
   <link rel="stylesheet" href="./assets/css/style.css" />
   <link rel="stylesheet" href="./assets/css/secondary-styles.css" />
+  <title>Privacy Policy - Run Buddy</title>
 </head>
 <body>
   <header>
@@ -405,7 +406,7 @@
   <footer>
     <h2>❤️ Made with love by Run Buddy.</h2>
     <div>
-      <a href="#">Read Our Privacy Policy</a><br />
+      <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
       &copy; 2019 Run Buddy, Inc.
     </div>
   </footer>
